public/style.css
/*==========================================================
                        GLOBAL
===========================================================*/
body {
    font-family: 'Lato', sans-serif;
    color: #4a4a4a;
}

.btn:focus {
    outline: none!important;
    color: #979797!important;
}

.btn-outline-primary {
    padding: 5px 25px;
    margin-bottom: 5px;
    color: #4a4a4a;
    font-weight: 300;
    background-color: transparent;
    background-image: none;
    border-color: #979797!important;
    border: solid 1px;
}

.btn-outline-primary:hover {
    color: #fff!important;
    background-color: #0b00d0; 
    border-color: #0b00d0!important;
    border: solid 1px;
}

.img-responsive {
    margin: 0 auto 15px;
}

:hover {
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -ms-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

/*==========================================================
                        NAVBAR
===========================================================*/
.navbar {
    border-radius: 0;
    margin-bottom: 0;
}

.navbar-inverse {
    border-color: #0b00d0;
    background-color: #0b00d0;
}

.navbar-inverse .navbar-brand {
    font-weight: 900;
    font-size: 22px;
    color: #fff;
}

.navbar-inverse .navbar-nav>.shop>a {
    font-weight: 400;
}

.navbar-inverse .navbar-nav>li>a {
    line-height: 1.3;
    font-weight: 400;
    font-size: 19px;
    color: #fff;
}

.nav>li>a {
    padding: 15px 5px;
}

.nav>li>a:hover {
    text-decoration: underline;
}

.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
    border-color: transparent;
    text-align: center;
    padding: 0 30px;
}

.navbar-inverse .navbar-toggle {
    border-color: transparent;
}

.navbar-inverse .navbar-toggle:hover {
    border-color: transparent;
    background-color: transparent;
}

.navbar-inverse .navbar-toggle:focus {
    border-color: transparent;
    background-color: transparent;
}

.fa-shopping-cart {
    margin-right: 10px;
}

.cart-box {
    border: solid #fff 1px;
    border-radius: 3px;
    background: white;
    color: #0b00d0;
    padding: 0px 12px;
    font-size: 16px;
    font-weight: 900;
    margin-left: 5px;
}

/*==========================================================
                        HEADER
===========================================================*/
.header {
    margin: 20px 30px 10px;
}

.header-row h1 {
    font-size: 24px;
    font-weight: 900;
}

/*==========================================================
                    ITEM ROW
===========================================================*/
.product-row {
    margin: 0;
}

.product-wrap {
    margin: 15px auto;
}

.product-container {
    box-shadow: 0 0 5px 2px rgba(198,179,179, 0.4);
    border: solid 2px rgba(198,179,179, 0.8);
    padding: 0 0 15px 0;
}

.product-container h3 {
    font-size: 18px;
    margin-top: 3px;
    font-weight: 300;
}

.product-container h4 {
    font-size: 16px;
    margin-bottom: 0;
    font-weight: 300;
}

.product-container:hover {
    border-color: #0b00d0;
}

.product-container:hover .btn-outline-primary {
    color: #0b00d0;
    background-image: none;
    border-color: #0b00d0!important;
    box-shadow: 0px 0px 0px 1px rgba(11,0,208,1);
}

/*==========================================================
                        MODAL
===========================================================*/
.Modal-overlay-0-1-1 {
    background: rgba(255, 255, 255, 0.8)!important;
    top: 56px!important;
}

.Modal-modal-0-1-3 {
    background: transparent!important;
    box-shadow: none!important;
    text-align: center;
    color: #4a4a4a;
    max-height: 95vh;
    max-width: 375px;
    width: 375px;
}

.Modal-modal-0-1-3 .btn-outline-primary {
    padding: 5px 40px;
}

.Modal-closeIcon-0-1-4 {
    display: none;
}

.cart-header {
    margin-bottom: 50px;
}

.cart-body-row {
    margin-bottom: 15px;
}

.cart-body-row:last-child {
    margin-bottom: 0;
}

.cart-footer {
    margin: 50px 0;
}

.cart-empty h3 {
    margin: 0 auto 10px;
    width: 70%;
}

.cart-divider {
    border-width: 2px;
    border-top: 2px solid #4a4a4a;
    margin-top: 0;
}

.product-image-wrap {
    border: 1px solid #979797;
    height: 65px;
    width: 65px;
    background-size: 215%;
    background-position: center center;
    background-repeat: no-repeat;
}

.cart-total,
.cart-amount,
.product-title {
    padding: 0;
}

.product-title p {
    margin-bottom: 0;
    font-size: 18px;
}

.product-delete {
    color: #d8d8d8;
    padding: 0;
    cursor: pointer;
}

.fa-plus-square,
.fa-minus-square {
    margin-right: 10px;
    cursor: pointer;
    color: #d8d8d8;
}

.fa-plus-square:hover,
.fa-minus-square:hover,
.fa-times-circle:hover {
    color: #4a4a4a;
}

/*==========================================================
                    MOBILE RESPONSIVE
===========================================================*/
@media screen and (max-width: 991px){
    .header {
        margin: 30px 30px 0px;
    }
    
    .product-wrap {
        width: 330px;
        margin: 30px auto;
    }

    .header {
        text-align: center;
    }
}

@media screen and (max-width: 768px){
    .product-container h3,
    .product-container h4,
    .btn-outline-primary {
        font-weight: 400;
    }

    .Modal-overlay-0-1-1 {
        background: rgba(255, 255, 255, 1)!important;
        top: 50px!important;
    }
}

